curd-manifest/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment 
  namespace: curd
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shubhamshinde2206/curd-backend:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: curd
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
