curd-manifest/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment 
  namespace: curd
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shubhamshinde2206/curd-frontend:latest
        ports:
        - containerPort: 5173


---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: curd
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 5173
      protocol: TCP
